--- a/app/src/main/res/layout/upload_details_row.xml
+++ b/app/src/main/res/layout/upload_details_row.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/rowLayout"
     android:background="@color/ash"
+    android:clickable="true"
     android:foreground="?selectableItemBackground"
     android:layout_height="wrap_content">
 
