--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -635,11 +635,12 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/submitBtn"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="@dimen/_60sdp"
+                android:layout_height="@dimen/_60sdp"
                 android:layout_marginTop="16dp"
+                android:textSize="@dimen/_12ssp"
                 android:background="@drawable/submit_btn"
                 android:foreground="?selectableItemBackground"
                 android:text="Submit"
