--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_profile"
             android:title="@string/menu_profile" />
         <item
+            android:id="@+id/nav_attendance"
+            android:icon="@drawable/ic_attend"
+            android:title="@string/menu_attendance" />
+        <item
             android:id="@+id/nav_activity"
             android:icon="@drawable/ic_work"
             android:title="@string/menu_activity" />
