--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,7 +10,11 @@
         android:name="com.example.routes.ui.profile.ProfileFragment"
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile" />
-
+    <fragment
+        android:id="@+id/nav_attendance"
+        android:name="com.example.routes.ui.attendance.AttendanceFragment"
+        android:label="@string/menu_attendance"
+        tools:layout="@layout/fragment_attendance" />
     <fragment
         android:id="@+id/nav_activity"
         android:name="com.example.routes.ui.activity.ActivityFragment"
